# bgmtv-hs

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bgm-tv.cabal  bgmtv.cabal  cabal.project
examples/: Main.hs
src/: BgmTV.hs
src/BgmTV/: API.hs
src/BgmTV/API/: Calendar.hs  Root.hs
src/BgmTV/Types/: Internal.hs  Subject.hs
src/Web/: Bgmtv.hs
src/Web/Bgmtv/: API.hs  Client.hs  Types.hs
src/Web/Bgmtv/Types/: Calendar.hs  Enums.hs  Episode.hs  Error.hs  Id.hs  Search.hs  Subject.hs
test/: APITest.hs  Main.hs  Spec.hs
test/Web/Bgmtv/: TypesSpec.hs
