cabal-version: 3.0
name: bgm-tv
version: 0.1.0.0
description: A Haskell client library for the BgmTV API.
license: MIT
license-file: LICENSE
author: birdgg
maintainer: birdeggegg@gmail.com
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

common deps
  build-depends:
    aeson,
    base ^>=4.21.0.0,
    http-client,
    http-client-tls,
    text,

library
  import: warnings, deps
  exposed-modules: BgmTV
  other-modules:
    BgmTV.API
    BgmTV.Types.Internal
    BgmTV.Types.Subject

  other-extensions:
    LambdaCase

  build-depends:
    servant,
    servant-client,
    servant-client-core,

  hs-source-dirs: src
  default-language: GHC2024

test-suite bgm-tv-test
  import: warnings, deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    APITest

  build-depends:
    bgm-tv,
    servant-client,
    tasty,
    tasty-hunit,

  hs-source-dirs: test
  default-language: GHC2024
