cabal-version:   3.0
name:            bgmtv
version:         0.1.0.0
synopsis:        Haskell client for BGM.tv API
description:     A type-safe Haskell client library for interacting with BGM.tv API using servant-client.
license:         MIT
license-file:    LICENSE
author:          birdgg
maintainer:      birdgg
category:        Web
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Web.Bgmtv
        Web.Bgmtv.Types
        Web.Bgmtv.API
        Web.Bgmtv.Client

    build-depends:
        base          >= 4.16 && < 5,
        aeson         >= 2.0  && < 3,
        http-client   >= 0.7  && < 0.8,
        http-client-tls >= 0.3 && < 0.4,
        servant       >= 0.19 && < 0.21,
        servant-client >= 0.19 && < 0.21,
        servant-client-core >= 0.19 && < 0.21,
        text          >= 1.2  && < 3

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        TypeFamilies
        TypeOperators
