cabal-version:   3.0
name:            bgmtv
version:         0.1.0.0
synopsis:        Haskell client for BGM.tv API
description:     A type-safe Haskell client library for interacting with BGM.tv API using servant-client.
license:         MIT
license-file:    LICENSE
author:          birdgg
maintainer:      birdgg
category:        Web
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Web.Bgmtv
        Web.Bgmtv.Types.Id
        Web.Bgmtv.Types.Enums
        Web.Bgmtv.Types.Search
        Web.Bgmtv.Types.Subject
        Web.Bgmtv.Types.Episode
        Web.Bgmtv.Types.Calendar
        Web.Bgmtv.Types.Error
        Web.Bgmtv.API
        Web.Bgmtv.Client

    build-depends:
        base          >= 4.20 && < 5,
        aeson         >= 2.0  && < 3,
        bytestring    >= 0.11 && < 0.13,
        http-client   >= 0.7  && < 0.8,
        http-client-tls >= 0.3 && < 0.4,
        http-types    >= 0.12 && < 0.13,
        servant       >= 0.20 && < 0.21,
        servant-client >= 0.20 && < 0.21,
        servant-client-core >= 0.20 && < 0.21,
        text          >= 2.0  && < 3,
        time          >= 1.12 && < 2

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        StrictData
        TypeFamilies
        TypeOperators
